test/bad/classes/type07.px

class A def
    x: Int

class B: A def
    y: Int

b = [[B()]]
t: [[[A]]]*Int = [b], 6
